--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "raf": "^3.4.1",
     "style-utils": "^0.1.21",
-    "tween-functions": "^1.2.0"
+    "tween-functions": "^1.2.0",
+    "vc-util": "^0.0.3"
   },
   "peerDependencies": {
     "vue": ">=2.5.0"
